# stargzr

./: .dockerignore  .gitattributes  .gitignore  Caddyfile  Cargo.toml  Dockerfile  LICENSE  README.md  Rust notes formated.docx  Rust notes.docx  askama.toml  docker-compose.yaml  stargzr.html  stargzr.md  workflow.docx
.github/workflows/: docker-build.yml
docs/: index.html  workflow.docx
src/: axum_test.rs  error.rs  lib.rs  main.rs  middlewares.rs  player.rs  primitives.rs  rate_limit.rs  todo.txt  validation.rs
src/player/: error.rs  handlers.rs  logging.rs  metrics.rs  mod.rs  radio.rs  rate_limit.rs  reconnect.rs  session.rs  templates.rs  types.rs  validation.rs
src/player/static/css/: player.css
src/player/static/js/: admin.js  analytics.js  hls-stream.js  iframe.js  main.js  ntv-verify.js  playlist.js  radio-player.js  search.js  upload.js  utils.js
src/player/templates/: player.html  player_controls.html
templates/: counter.html  counter_partial.html  index.html  player.html  player_controls.html
tests/: player_tests.rs
