[package]
name = "network_tests"
version = "0.1.0"
edition = "2024"

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
tower = { version = "0.5.2", features = ["full"] }
local-ip-address = "0.6"
pin-project = "1.1.10"
atomic-wait = "1"
axum = "0.8.8"
askama = "0.15.1"
tokio-util = "0.7.18"
uuid = { version = "1.19.0", features = ["v4", "fast-rng"] }
parking_lot = "0.12.5"
