[package]
name = "stargzr"
version = "0.1.0"
edition = "2024"

[dependencies]
hyper = { version = "1.8.1", features = ["full"] }
tokio = { version = "1.49.0", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1.19", features = ["full"] }
tower = { version = "0.5.3", features = ["full"] }
local-ip-address = "0.6.10"
pin-project = "1.1.10"
atomic-wait = "1"
axum = { version = "0.8.8", features = ["ws"] }
askama = "0.15.4"
tokio-util = "0.7.18"
uuid = { version = "1.20.0", features = ["v4", "fast-rng"] }
parking_lot = "0.12.5"
serde = { version = "1.0.228", features = ["derive"] }
futures = "0.3.31"
serde_json = "1.0.149"
futures-util = "0.3.31"
thiserror = "2.0.18"
metrics = "0.24.3"
tracing = "0.1.44"
regex = "1.12.2"
once_cell = "1.21.3"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2.4"
rand = "0.9.2"
dashmap = "6.1.0"
env = "1.0.1"
