[package]
name = "stargzr"
version = "0.1.0"
edition = "2024"

[dependencies]
hyper = { version = "1.8.1", features = ["full"] }
tokio = { version = "1.49.0", features = ["full"] }
axum = { version = "0.8.8", features = ["ws"] }
askama = "0.15.4"
tokio-util = "0.7.18"
uuid = { version = "1.20.0", features = ["v4", "fast-rng"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
futures-util = "0.3.31"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt", "json"] }
rand = "0.9.2"
dashmap = "6.1.0"
env = "1.0.1"
